0.7.13
- Full license templates can be generated
- License templates shipped with app:
  - BSD-2-Clause
  - BSD-4-Clause
  - BSL-1.0
  - CC0
  - EPL-1.0
  - ISC
  - MIT-X
  - OFL-1.1
  - Zlib-PNG
- Custom license templates can be placed in $HOME/.local directory

0.7.12
- Fixes:
  - Added fixed & updated modules from unstable branch
  - Fix first run window not closing
  - Fix opening projects from command line
  - Fix problems with add/remove/delete in dependency list
  - Fix progress dialogs cannot be cancelled
  - Fix Quick Build
- Code Cleanup:
  - Removed old/unused code & comments
  - Removed some unused/deprecated modules & classes
- New Features:
  - About dialog:
    - Displays system information (Python & wxPython versions)
  - Added manpage
  - Command line:
    - 'legacy': Forces wx 2.8 if available
    - 'compile': Compiles Python source files (.py) into bytecode (.pyc)
    - 'clean': Removes compiled Python bytecode from Debreate directory
    - '-h|--help': Displays output of 'man debreate'
      - installed: Uses default manpath
      - portable: Uses sub-directory man/man1
    - '-v|--version': displays Debreate version
    - '-l=|--log-level=': sets the logger verbosity
      - Value can be one of 'info|0', 'warning|1', 'error|2', or 'debug|3'
      - Default level is 'error' (2)
    - '-i=|--log-interval=': is reserved for 0.8.0 (currently does nothing)
  - Logger added for outputting messages to text log
  - Menu options:
    - Enable/Disable tooltips (wx 3.0 only)
    - Open logs directory in system file manager
      - requires 'xdg-open' command
  - Page Build:
    - Option to install packages after build uses gdebi
      - 'gdebi-gtk' or 'gdebi-kde' command required
  - Page Changelog:
    - New 'urgency' options 'medium' & 'emergency'
  - Page Control:
    - Added 'arm64' to architectures
  - Page Files:
    - File import progress dialog shows task count
    - File list can be refreshed